		* src/connection.c: now can quit even when expecting a message from the client

	header file changes
		* include/vgcp.h: updated prototypes
		* include/config.h: added new option for debugging the socket related code called _SOCKET_DEBUG

	EDIT 2021-03-24: very small stylistic change 

2021-03-24	version 00-0013
	Now implemented white moving via sockets and optimized some code.

	source file changes
		* src/connection.c: added new functions to handle the connection with the white connection.
		* src/main.c (main): added a new command line argument in which the user can specify white's connection port ("-w")
		* src/util.c (help): added more information about new command line arguments ("-b" and "-w")

	header file changes
		* include/vgcp.h: added new variables (msgToWhite, msgWhite), updated and added new prototypes


2021-03-28	version 00-0014
	Fixed socket related bugs, fixed connection not working without _SOCKET_DEBUG and removed unnecessary "to" variable in the "msg" structure.

	source file changes
		* src/connection.c: added delay when it would block, no longer uses "to" variable in the "msg" structure
		* src/main.c: no longer uses "to" variable in the "msg" structure, 
			now creates threads after parsing through the command line arguments

	header file changes
		* include/vgcp.h: removed "to" variable from the "msg" structure

2021-03-30	version 00-0015
	Now checks the client's move's legality, shortened the delays between checking if new messages have come from the client or the main thread and made minor changes to some log messages.

	source file changes
		* src/connection.c: lessened some delays between checking for messages
		* src/move.c: added new function called checkMoveLegality
		* src/main.c (main): now calls the checkMoveLegality before executing the client's move
	
	header file changes
		* include/vgcp.h: updated prototypes
		* include/config.h: the _SOCKET_DEBUG option is no longer default