@@ -2,7 +2,7 @@
 
 This is a list of features that are to be done next for this program.
 
-- [ ] Rewrite the chess protocol implementation.
+- [x] Rewrite the chess protocol implementation. **NOTE: The chess protocol implementation still needs to be worked on but it's good enough for now.**
 - [ ] Create documentation for the chess protocol (currently I just call it the "vgcp chess protocol")
 - [ ] Create a simple test AI for the chess game
 - [ ] Create a more complex AI for the chess game
