@@ -260,3 +260,12 @@ NOTE: These entries may not contain every single minor change but should contain
 	header file changes
 		* include/vgcp.h: updated prototypes
 		* include/config.h: the _SOCKET_DEBUG option is no longer default
+
+2021-03-30	version 00-0016
+	Now sends the quit call correctly to the client always (I think).
+
+	source file changes
+		* src/connection.c (*Quits): now sends the quit call (just 'q') to the client from this function
+
+	header file changes
+		* include/vgcp.h: updated prototypes
